projects/nex.rpi/src/apps/nr-dns/live/production/adguardhome-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: adguardhome-server
    app.kubernetes.io/name: adguardhome
    app.kubernetes.io/version: v0.107.52
  name: adguardhome
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: kube-system
      sectionName: nr.chezmoi.sh-websecure
  hostnames:
    - dns.nr.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: adguardhome
          port: 80
